# ChangeLog for media-sound/gqmpeg
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gqmpeg/ChangeLog,v 1.13 2004/11/01 19:35:02 corsair Exp $

  01 Nov 2004; Markus Rothe <corsair@gentoo.org>

  gqmpeg-0.20.0.ebuild:
  Marked ~ppc64; bug #64630

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.20.0.ebuild:
  Stable amd64, sparc.

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.20.0.ebuild:
  ~amd64

  15 May 2004; Jason Wever <weeve@gentoo.org> gqmpeg-0.20.0.ebuild:
  Added ~sparc keyword.

  13 May 2004; David Holm <dholm@gentoo.org> gqmpeg-0.20.0.ebuild:
  Added to ~ppc.

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.17.0.ebuild,
  gqmpeg-0.19.0.ebuild, gqmpeg-0.20.0.ebuild:
  Ebuild cleanup.  Stable on x86.

  09 Sep 2003; Aron Griffis <agriffis@gentoo.org> gqmpeg-0.20.0.ebuild:
  Add ~alpha

*gqmpeg-0.20.0 (25 Jun 2003)

  25 Jun 2003; Martin Holzer <mholzer@gentoo.org> gqmpeg-0.20.0.ebuild:
  Version bumped. Closes #19017.

*gqmpeg-0.19.0 (22 Oct 2002)

  22 Oct 2202; Seemant Kulleen <seemant@gentoo.org> gqmpeg-0.19.0.ebuild
  files/digest-gqmpeg-0.19.0 :

  Version bump, thanks to: rectrix@rectrix.cx (Tim Hobbs) in bug #9400.

*gqmpeg-0.17.0 (26 Aug 2002)

  26 Aug 2002; Paul Belt <gaarde@gentoo.org> ChangeLog :

  Version bump.

*gqmpeg-0.9.0 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.