@@ -1,0 +1,39 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gqmpeg/gqmpeg-0.91.1.ebuild,v 1.1 2004/11/21 20:53:59 chainsaw Exp $
+
+IUSE="nls gnome"
+
+DESCRIPTION="front end to various audio players, including mpg123"
+HOMEPAGE="http://gqmpeg.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+RESTRICT="nomirror"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~x86 ~alpha ~ppc ~sparc ~amd64 ~ppc64"
+
+DEPEND=">=x11-libs/gtk+-2.4
+	>=x11-libs/pango-1.2
+	>=media-sound/mpg123-0.59p
+	media-sound/vorbis-tools"
+RDEPEND="nls? ( sys-devel/gettext )"
+
+src_compile() {
+	local myconf
+	use nls || myconf="--disable-nls"
+
+	econf ${myconf} || die
+	emake || die
+}
+
+src_install() {
+	make DESTDIR=${D} install || die
+
+	dodoc [A-KN-Z]*
+
+	use gnome && ( \
+		insinto /usr/share/gnome/apps/Multimedia
+		doins ${FILESDIR}/gqmpeg.desktop
+	)
+}
